<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:HMApplication="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F6F6F6"
    android:fitsSystemWindows="false">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="207dp"
        android:scaleType="fitXY"
        android:src="@mipmap/background_personal_header" />

    <RelativeLayout
        android:id="@+id/relativeLayout_title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="@dimen/uikit_status_bar_height"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_menuBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="50dp"
            android:paddingTop="10dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/uikit_ic_menu_back_black" />

        <ImageView
            android:id="@+id/iv_action"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingLeft="50dp"
            android:paddingRight="18.5dp"
            android:scaleType="fitCenter"
            android:src="@mipmap/icon_personal_qr_code" />

    </RelativeLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/relativeLayout_title"
        HMApplication:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:background="@mipmap/background_personal_header_image">

                <com.hm.iou.uikit.ShapedImageView
                    android:id="@+id/iv_header"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_marginLeft="45dp"
                    android:layout_marginTop="40dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/uikit_icon_header_unknow"
                    HMApplication:shape_mode="circle" />

                <TextView
                    android:id="@+id/tv_userNickName"
                    android:layout_width="130dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_toRightOf="@id/iv_header"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="昵称"
                    android:textColor="#ff222222"
                    android:textSize="@dimen/textFontSize_18" />

                <TextView
                    android:id="@+id/tv_userId"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginTop="84dp"
                    android:layout_toRightOf="@id/iv_header"
                    android:text="用户ID"
                    android:textColor="#ffa3a3a3"
                    android:textSize="@dimen/textFontSize_14" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="40dp"
                    android:layout_marginTop="110dp">

                    <ImageView
                        android:id="@+id/iv_authentication"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/icon_authentication_not_have" />

                    <ImageView
                        android:id="@+id/iv_02"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_marginRight="10dp"
                        android:src="@mipmap/icon_personal_zmxy_h"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/iv_03"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:src="@mipmap/icon_personal_zfb_h"
                        android:visibility="gone" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_personalSignature"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/personal_signature"
                        android:textColor="#ff222222"
                        android:textSize="@dimen/textFontSize_15" />

                    <TextView
                        android:id="@+id/tv_signatureMake"
                        android:layout_width="wrap_content"
                        android:layout_height="21dp"
                        android:gravity="center"
                        android:paddingLeft="8dp"
                        android:paddingRight="8dp"
                        android:text="@string/personal_signatureMake"
                        android:textColor="#858585"
                        android:textSize="@dimen/textFontSize_16" />

                    <ImageView
                        android:layout_width="8.5dp"
                        android:layout_height="17dp"
                        android:src="@mipmap/uikit_ic_arrow_right" />
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/relativeLayout_phoneAndWx"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="40dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:src="@mipmap/icon_phone_blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginLeft="22dp"
                        android:text="@string/personal_phoneOrWxChat"
                        android:textColor="#ff222222"
                        android:textSize="@dimen/textFontSize_16" />

                    <TextView
                        android:id="@+id/tv_modulePhone"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_marginLeft="22dp"
                        android:layout_marginTop="25dp"
                        android:ellipsize="end"
                        android:textColor="#ffa3a3a3"
                        android:textSize="@dimen/textFontSize_13" />
                </RelativeLayout>

                <View
                    style="@style/UikitDivider"
                    android:layout_width="1px"
                    android:layout_height="80dp" />

                <RelativeLayout
                    android:id="@+id/relativeLayout_livePlace"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="40dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:src="@mipmap/icon_personal_live_place" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginLeft="22dp"
                        android:text="@string/personal_livePlace"
                        android:textColor="#ff222222"
                        android:textSize="@dimen/textFontSize_16" />

                    <TextView
                        android:id="@+id/tv_moduleLivePlace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:layout_marginTop="25dp"
                        android:textColor="#ffa3a3a3"
                        android:textSize="@dimen/textFontSize_13" />
                </RelativeLayout>

            </LinearLayout>

            <View style="@style/UikitDivider.Horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/relativeLayout_nameAndSex"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="40dp">

                    <ImageView
                        android:id="@+id/iv_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:src="@mipmap/icon_personal_name_sex_unkonw" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginLeft="22dp"
                        android:text="@string/personal_nameAndSex"
                        android:textColor="#ff222222"
                        android:textSize="@dimen/textFontSize_16" />

                    <TextView
                        android:id="@+id/tv_moduleName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:layout_marginTop="25dp"
                        android:ellipsize="end"
                        android:textColor="#ffa3a3a3"
                        android:textSize="@dimen/textFontSize_13" />
                </RelativeLayout>

                <View
                    style="@style/UikitDivider"
                    android:layout_width="1px"
                    android:layout_height="80dp" />

                <RelativeLayout
                    android:id="@+id/relativeLayout_mainIncome"
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingLeft="40dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:src="@mipmap/icon_personal_my_income" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="22dp"
                        android:layout_marginLeft="22dp"
                        android:text="@string/personal_mainIncome"
                        android:textColor="#ff222222"
                        android:textSize="@dimen/textFontSize_16" />

                    <TextView
                        android:id="@+id/tv_moduleMainInCome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="22dp"
                        android:layout_marginTop="25dp"
                        android:textColor="#ffa3a3a3"
                        android:textSize="@dimen/textFontSize_13" />
                </RelativeLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout_changePassword"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dp"
                android:background="#ffffffff"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="19dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/personal_changePassword"
                    android:textColor="#ff222222"
                    android:textSize="@dimen/textFontSize_15" />

                <ImageView
                    android:layout_width="8.5dp"
                    android:layout_height="17dp"
                    android:background="@mipmap/uikit_ic_arrow_right" />
            </LinearLayout>

            <View style="@style/UikitDivider.Horizontal" />

            <LinearLayout
                android:id="@+id/ll_person_favorite"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="#ffffffff"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="19dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="21dp"
                    android:layout_weight="1"
                    android:text="我的收藏"
                    android:textColor="#ff222222"
                    android:textSize="@dimen/textFontSize_15" />

                <ImageView
                    android:layout_width="8.5dp"
                    android:layout_height="17dp"
                    android:background="@mipmap/uikit_ic_arrow_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_helpAndTickling"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="10dip"
                android:background="#ffffffff"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="19dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="21dp"
                    android:layout_weight="1"
                    android:text="@string/personal_helpAndTickling"
                    android:textColor="#ff222222"
                    android:textSize="@dimen/textFontSize_15" />

                <ImageView
                    android:layout_width="8.5dp"
                    android:layout_height="17dp"
                    android:background="@mipmap/uikit_ic_arrow_right" />
            </LinearLayout>

            <View style="@style/UikitDivider.Horizontal" />

            <LinearLayout
                android:id="@+id/linearLayout_moreSeting"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="#ffffffff"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="19dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="21dp"
                    android:layout_weight="1"
                    android:text="@string/personal_moreSetting"
                    android:textColor="#ff222222"
                    android:textSize="@dimen/textFontSize_15" />

                <ImageView
                    android:layout_width="8.5dp"
                    android:layout_height="17dp"
                    android:background="@mipmap/uikit_ic_arrow_right" />
            </LinearLayout>

            <View style="@style/UikitDivider.Horizontal" />

            <TextView
                android:id="@+id/btn_logoutSafely"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/shape_background_personal_logout"
                android:gravity="center"
                android:text="@string/personal_logoutSafely"
                android:textColor="#ff666666"
                android:textSize="@dimen/textFontSize_16" />

            <TextView
                android:id="@+id/tv_currentVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="当前版本1.0.0"
                android:textColor="#ff858585"
                android:textSize="@dimen/textFontSize_12" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>
